# moris

./: .clang-format  .cproject  .gitignore  .project  BSpline_0.vtk  BSpline_1.vtk  CMakeCache.txt  CMakeLists.txt  CMakeLists.txt.new  Circle.hdf5  Coeffs.hdf5  Database.hdf5  Install.md  LICENSE.txt  Lagrange_0.vtk  Lagrange_1.vtk  Mesh1.exo.2.0  Mesh1.exo.2.1  Mesh_Data.hdf5  Mesh_Data_test.hdf5  Parameter_Receipt.xml  README.md  SolVector.NonLIt.0001.h5  SolVector.NonLIt.0002.h5  TMatrix_2.hdf5  build  dudel  enrichment_test_10_cluster.e  enrichment_test_10_cluster_background.e  fileList  gLogger.log.0  meshMultFields.exo  mtk_par_mtk_from_data.e.4.0  mtk_par_mtk_from_data.e.4.1  mtk_par_mtk_from_data.e.4.2  mtk_par_mtk_from_data.e.4.3  selected.patch  tes.cpp  test_file  test_mesh.exo  (+18 more)
projects/: CMakeLists.txt  tgt_includes.cmake
projects/ALG/: CMakeLists.txt
projects/ALG/src/: ALGConfig.cmake.in  CMakeLists.txt  algorithms.hpp  algorithmsConfig.cmake.in  fn_check_equal.hpp  fn_clip_value.hpp  fn_equal_to.cpp  fn_equal_to.hpp  fn_equal_to.tpp  fn_hash_value.hpp  fn_num_digits.hpp
projects/ALG/test/: CMakeLists.txt  faux_main.cpp  fn_equal_to.cpp  fn_num_digits.cpp
projects/COM/: CMakeLists.txt
projects/COM/doc/: Comm_Overview.dox
projects/COM/src/: CMakeLists.txt  COMConfig.cmake.in  cl_Communication_Enums.hpp  cl_Communication_Manager.cpp  cl_Communication_Manager.hpp  cl_Communication_Tools.cpp  cl_Communication_Tools.hpp  cl_MPI_Tools.hpp
projects/COM/test/: CMakeLists.txt  cl_Communication_Tools.cpp  test_main.cpp
projects/DLA/: CMakeLists.txt
projects/DLA/doc/: DLA_Linear_Problem.dox  DLA_Linear_Solver.dox  DLA_Multigrid.dox
projects/DLA/src/: CMakeLists.txt  DLAConfig.cmake.in  cl_Communicator_Epetra.cpp  cl_Communicator_Epetra.hpp  cl_DLA_Enums.hpp  cl_DLA_Geometric_Multigrid.cpp  cl_DLA_Geometric_Multigrid.hpp  cl_DLA_Linear_Problem.cpp  cl_DLA_Linear_Problem.hpp  cl_DLA_Linear_Solver.hpp  cl_DLA_Linear_Solver_Amesos.cpp  cl_DLA_Linear_Solver_Amesos2.cpp  cl_DLA_Linear_Solver_Aztec.cpp  cl_DLA_Linear_Solver_Aztec.hpp  cl_DLA_Linear_Solver_Manager.cpp  cl_DLA_Linear_Solver_Manager.hpp  cl_DLA_Linear_Solver_PETSc.cpp  cl_DLA_Linear_Solver_PETSc.hpp  cl_DLA_Linear_System_PETSc.cpp  cl_DLA_Linear_System_PETSc.hpp  cl_DLA_Linear_System_Trilinos.cpp  cl_DLA_Linear_System_Trilinos.hpp  cl_DLA_Solver_Factory.cpp  cl_DLA_Solver_Factory.hpp  cl_DLA_Solver_Interface.cpp  cl_DLA_Solver_Interface.hpp  cl_DistLinAlg_Enums.hpp  cl_Linear_Solver.hpp  cl_Linear_Solver_Amesos.cpp  cl_Linear_Solver_Amesos.hpp  cl_Linear_Solver_Amesos2.cpp  cl_Linear_Solver_Amesos2.hpp  cl_Linear_Solver_Aztec.cpp  cl_Linear_Solver_Aztec.hpp  cl_Linear_Solver_PETSc.cpp  cl_Linear_Solver_PETSc.hpp  cl_Linear_Solver_Trilinos.cpp  cl_Linear_Solver_Trilinos.hpp  cl_Map_Class.hpp  cl_Map_Epetra.cpp  (+27 more)
projects/DLA/test/: CMakeLists.txt  cl_DLA_Multigrid_Test.cpp  cl_Dist_Vector_Test.cpp  cl_Linear_Solver_Test.cpp  cl_Map_Epetra.cpp  cl_Sparse_Matrix_Test.cpp  test_main.cpp
projects/EXA/: CMakeLists.txt
projects/EXA/doc/: EXA_DEV_GUIDE.dox  EXA_FLUID.dox  EXA_OPTIMIZATION.dox  EXA_STRUCTURAL.dox  EXA_THERMAL.dox  EXA_Thermal_Fickian_Problem.dox  EXA_Thermal_GGLS_Demo.dox  EXA_Thermal_Stefans_Problem.dox
projects/EXA/fluid/: CMakeLists.txt
projects/EXA/interpolation_immersed_optimization/: Interpolation_based_immersed_design_iteration_run.cpp  Interpolation_based_immersed_initialize.cpp
projects/EXA/mesh_generation/: CMakeLists.txt
projects/EXA/optimization/: CMakeLists.txt
projects/EXA/src/: example_main.cpp
projects/EXA/structure/: CMakeLists.txt
projects/EXA/templates/: CMakeLists.txt.template  example_documentation.dox.template  example_test_case.cpp.template
projects/EXA/thermal/: CMakeLists.txt
projects/FEM/: CMakeLists.txt
projects/FEM/INT/: CMakeLists.txt
projects/FEM/MDL/: CMakeLists.txt
projects/FEM/MSI/: CMakeLists.txt
projects/FEM/VIS/: CMakeLists.txt
projects/GUI/: CMakeLists.txt
projects/GUI/src/: CMakeLists.txt  TestWindow.cpp  TestWindow.hpp  cl_bool_combo_box.cpp  cl_bool_combo_box.hpp  cl_combo_box.cpp  cl_combo_box.hpp  cl_double_spin_box.cpp  cl_double_spin_box.hpp  cl_group_box.cpp  cl_group_box.hpp  cl_int_spin_box.cpp  cl_int_spin_box.hpp  cl_line_edit.cpp  cl_line_edit.hpp  cl_pair_box.cpp  cl_pair_box.hpp  cl_tree_widget_item.cpp  cl_tree_widget_item.hpp  example_test.cpp  fn_read_file_dialog.cpp  fn_read_file_dialog.hpp  fn_write_file_dialog.cpp  fn_write_file_dialog.hpp  main.cpp  main_gui.cpp  main_gui.hpp  moris_bool_combo_box.cpp  (+19 more)
projects/HMR/: CMakeLists.txt
projects/IOS/: CMakeLists.txt
projects/LINALG/: CMakeLists.txt
projects/LNA/: CMakeLists.txt
projects/MIG/: CMakeLists.txt
projects/MOD/: CMakeLists.txt
projects/MRS/: CMakeLists.txt
projects/MTK/: CMakeLists.txt
projects/NLA/: CMakeLists.txt
projects/OPT/: CMakeLists.txt
projects/PRM/: CMakeLists.txt
projects/SOL/: CMakeLists.txt  cl_DLA_Solver_Interface.cpp
projects/STK/: CMakeLists.txt
projects/TOL/: CMakeLists.txt
projects/WRK/: CMakeLists.txt
projects/XTK/: CMakeLists.txt
projects/mains/: CMakeLists.txt  input_file.cpp  main.cpp  main_l2test.cpp  main_union.cpp
share/doc/: AsciiQuickReference.txt  Building_moris.dox  CMakeLists.txt  Dev_Adding_Executables.dox  Dev_Adding_Libraries.dox  Dev_Adding_Projects.dox  Dev_CMake_Config_Details.dox  Dev_CMake_Lists_Details.dox  Dev_CMake_Upper_Details.dox  Dev_Coding_Style.dox  Dev_Documentation_Style.dox  Dev_Errors_Asserts.dox  Dev_Running_Tests.dox  Dev_SVN_Commands.dox  Dev_Seg_Faults.dox  Dev_Writing_Functions.dox  Dev_Writing_Tests.dox  Doxyfile.in  GettingStarted.dox  Modules.dox  Overview.dox  SpAlgSample.dox  SpAlg_Petsc.dox  SpAlg_Trilinos.dox  TensorClassIntro.dox  Topic_BugReporting.dox  Topic_Bugzilla.dox  Topic_Makefile_Wrapper.dox  Topic_RSYNC.dox  Topic_SVN.dox  Topic_Some_Useful_Commands.dox  Topics.dox  Using_Moris.dox  Wrk_HMR_XTK_GEN_FEM_Workflow.dox  Wrk_STK_FEM_WorkFlow.dox  Wrk_STK_XTK_WorkFlow.dox  moris_formula.tex  moris_header.html  moris_layout.xml  moris_style.css
(+5014 files in other folders)
